--- a/sass/base/_default.scss
+++ b/sass/base/_default.scss
@@ -2,9 +2,8 @@ body {
     background-color: $primary-background-color;
     color: $primary-text-color;
     font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+
+    @include font(14px, 400, 1.71);
     letter-spacing: 0.03em;
 }
 
