--- a/sass/components_general/_logo.scss
+++ b/sass/components_general/_logo.scss
@@ -1,29 +1,28 @@
 @mixin logoColor($color) {
-    color: $color;
+  color: $color;
 }
 
 .logo {
-    display: flex;
-    text-decoration: none;
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
+  display: flex;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
 
-    @media (max-width: 1199px) {
-        justify-content: center;
-    }
+  @include font(26px, 700, 1.2);
 
-    &__letters {
-            @include logoColor($logo-button-text-color);
-        }
+  @media (max-width: 1199px) {
+    justify-content: center;
+  }
 
-    &__header {
-        @include logoColor($text-color);
-        margin-right: 92px;
-    }
-    &__footer {
-        @include logoColor($added-text-color);
-        margin-bottom: 20px;
-    }
+  &__letters {
+    @include logoColor($logo-button-text-color);
+  }
+
+  &__header {
+    @include logoColor($text-color);
+    margin-right: 92px;
+  }
+  &__footer {
+    @include logoColor($added-text-color);
+    margin-bottom: 20px;
+  }
 }
