--- a/sass/components_portfolio/_potfolio-filtrs.scss
+++ b/sass/components_portfolio/_potfolio-filtrs.scss
@@ -1,32 +1,31 @@
 .filtrs {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 
-    &__item:not(:last-child) {
-            margin-right: 8px;
-        }
-    &__btn {
-        padding: 6px 22px;
-        background-color: $secondary-background-color;
-        color: $secondary-text-color;
-        font-family: inherit;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.6;
-        letter-spacing: 0.03em;
-        cursor: pointer;
-        border-radius: 4px;
-        border-width: 0;
-        transition: background-color 250ms $timing-function,
-        color 250ms $timing-function, box-shadow 250ms $timing-function;
+  &__item:not(:last-child) {
+    margin-right: 8px;
+  }
+  &__btn {
+    padding: 6px 22px;
+    background-color: $secondary-background-color;
+    color: $secondary-text-color;
+    font-family: inherit;
 
-        &:hover,
-        &:focus {
-                background-color: $logo-button-text-color;
-                color: $added-text-color;
-                box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-                    0px 2px 2px rgba(0, 0, 0, 0.12);
-            }
+    @include font(16px, 500, 1.6);
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    border-radius: 4px;
+    border-width: 0;
+    transition: background-color 250ms $timing-function, color 250ms $timing-function,
+      box-shadow 250ms $timing-function;
+
+    &:hover,
+    &:focus {
+      background-color: $logo-button-text-color;
+      color: $added-text-color;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
     }
+  }
 }
