--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-@import './utils/fonts';
 @import './utils/vars';
+@import './utils/mixins';
 @import './base/default';
 @import './components_general/site-nav';
 @import './components_general/logo';
