--- a/sass/components_index/_hero-index.scss
+++ b/sass/components_index/_hero-index.scss
@@ -1,9 +1,10 @@
 // Hero img for mobile
 .hero {
-  max-width: 1600px;
+  // max-width: 1600px;
+  max-width: 576px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
-
   background-color: $background-color-added;
 
   background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
@@ -25,22 +26,31 @@
   // Hero img for tablet
   @media screen and (min-width: 481px) {
     background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
-      url(../images/tablet/hero-tablet.jpg);
+      url(../../images/tablet/hero-tablet.jpg);
+    max-width: 960px;
+    height: 400px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
-        url(../images/tablet/hero-tablet@2x.jpg);
+        url(../../images/tablet/hero-tablet@2x.jpg);
     }
   }
+}
 
-  // Hero img for desktop
-  @media screen and (min-width: 769px) {
-    padding-top: 118px;
-    padding-bottom: 118px;
+// Hero img for desktop
+@media screen and (min-width: 769px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
 
     background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
       url(../images/desk/hero-desk.jpg);
-
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
         url(../images/desk/hero-desktop@2x.jpg);
