--- a/sass/components_portfolio/_potfolio-filtrs.scss
+++ b/sass/components_portfolio/_potfolio-filtrs.scss
@@ -1,11 +1,28 @@
 .filtrs {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-bottom: 40px;
+  
 
-  &__item:not(:last-child) {
-    margin-right: 8px;
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap:nowrap;
+    justify-content: center;
+    margin-bottom: 30px;
   }
+    
+  @media (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
+
+
+
+  &__item {
+    margin-right: 8px;
+    margin-bottom: 8px;
+  }
+
   &__btn {
     padding: 6px 22px;
     background-color: $secondary-background-color;
@@ -27,5 +44,11 @@
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters .filters__item+.filters__item {
+    margin-left: 8px;
   }
 }
