--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -1,8 +1,8 @@
 .nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 60px;
+  // justify-content: space-between;
+  // height: 60px;
 
   @media (min-width: 1200px) {
     margin: 0 auto;
@@ -20,14 +20,14 @@
 
 .header {
   position: relative;
-  min-height: 60px;
-  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: $color-border-header;
 
-  @media screen and (min-width: 768px) {
-    height: 80px;
-    display: flex;
-  }
+  // @media screen and (min-width: 768px) {
+  //   height: 80px;
+  //   display: flex;
+  // }
 }
 
 .site-nav {
@@ -79,13 +79,20 @@
 // Mobile menu button
 
 .menu-btn {
-  display: inline-flex;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  margin: 0;
+  // display: inline-flex;
+  // position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  width: 40px;
+  height: 40px;
+
+  // top: 10px;
+  // right: 15px;
+  // margin: 0;
   padding: 0;
-  border: 0;
+  border: none;
   background-color: transparent;
   fill: $secondary-text-color;
 
@@ -94,8 +101,15 @@
     fill: $logo-button-text-color;
   }
 }
+
 .menu-btn.menu-btn__close {
   fill: $logo-button-text-color;
+}
+
+.menu-btn__cross {
+      position: absolute;
+        top: 10px;
+        right: 15px;
 }
 
 @media screen and (min-width: 768px) {
@@ -110,20 +124,25 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding-top: 48px;
+  width: 100%;
+  height: 100%;
+  // padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
   z-index: 999;
 
   transform: translateX(100%);
   transition: transform 250ms $timing-function;
+
+  @media (min-width:768px) {
+    display: none;
+  }
 }
 
 .menu-container.is-open {
   transform: translateX(0);
 }
+
 
 .menu-nav {
   margin-bottom: 302px;
