--- a/css/main.css
+++ b/css/main.css
@@ -158,12 +158,6 @@ img {
   fill: #2196f3;
 }
 
-.menu-btn__cross {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-
 @media screen and (min-width: 768px) {
   .menu-btn {
     display: none;
@@ -176,6 +170,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
   z-index: 999;
@@ -195,6 +190,12 @@ img {
 .menu-container.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.menu-btn__cross {
+  position: absolute;
+  top: 10px;
+  right: 15px;
 }
 
 .menu-nav {
