--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -106,12 +106,6 @@
   fill: $logo-button-text-color;
 }
 
-.menu-btn__cross {
-      position: absolute;
-        top: 10px;
-        right: 15px;
-}
-
 @media screen and (min-width: 768px) {
   .menu-btn {
     display: none;
@@ -126,7 +120,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  // padding-top: 48px;
+  padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
   z-index: 999;
@@ -143,6 +137,11 @@
   transform: translateX(0);
 }
 
+.menu-btn__cross {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
 
 .menu-nav {
   margin-bottom: 302px;
