--- a/css/main.css
+++ b/css/main.css
@@ -65,11 +65,6 @@ img {
     margin: 0 auto;
   }
 }
-@media screen and (min-width: 768px) {
-  .nav {
-    height: 80px;
-  }
-}
 
 .navigation {
   display: -webkit-box;
@@ -86,6 +81,11 @@ img {
   padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
 }
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 0;
+  }
+}
 
 .site-nav {
   display: -webkit-box;
@@ -93,6 +93,7 @@ img {
   display: flex;
 }
 .site-nav__link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
   color: #212121;
@@ -152,6 +153,12 @@ img {
 }
 .menu-btn:hover, .menu-btn:focus {
   fill: #2196f3;
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
 }
 
 .menu-btn.menu-btn__close {
@@ -353,6 +360,9 @@ img {
 @media (min-width: 768px) and (max-width: 1199px) {
   .contacts__details {
     padding: 0;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1.14;
   }
 }
 .contacts__details:hover, .contacts__details:focus {
@@ -371,7 +381,6 @@ img {
   }
 }
 .hero {
-  height: 400px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -421,10 +430,8 @@ img {
   }
 }
 .hero__title {
+  margin: 0 auto;
   margin-bottom: 30px;
-  margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
   max-width: 360px;
   color: #ffffff;
   font-size: 26px;
@@ -764,7 +771,6 @@ img {
 }
 .features__title {
   margin-bottom: 10px;
-  margin-top: 0;
   color: #212121;
   font-size: 14px;
   font-weight: 700;
