--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -8,9 +8,10 @@
     margin: 0 auto;
   }
 
-  @media screen and (min-width: 768px) {
-    height: 80px;
-  }
+  // @media screen and (max-width: 767px) {
+  //   padding-bottom: 10px;
+  //   padding-top: 10px;
+  // }
 }
 
 .navigation {
@@ -24,16 +25,16 @@
   padding-bottom: 10px;
   border-bottom: $color-border-header;
 
-  // @media screen and (min-width: 768px) {
-  //   height: 80px;
-  //   display: flex;
-  // }
+  @media screen and (min-width: 768px) {
+    padding: 0;
+  }
 }
 
 .site-nav {
   display: flex;
 
   &__link {
+    display: block;
     padding-top: 32px;
     padding-bottom: 32px;
     color: $secondary-text-color;
@@ -100,6 +101,12 @@
   &:focus {
     fill: $logo-button-text-color;
   }
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
 }
 
 .menu-btn.menu-btn__close {
