--- a/sass/components_index/_hero-index.scss
+++ b/sass/components_index/_hero-index.scss
@@ -1,7 +1,7 @@
 // Hero img for mobile
 .hero {
 
-  height: 400px;
+  // height: 400px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -59,10 +59,8 @@
 }
 
 .hero__title {
+  margin: 0 auto;
   margin-bottom: 30px;
-  margin-top: 0;
-  margin-right: auto;
-  margin-left: auto;
   max-width: 360px;
   color: $added-text-color;
 
