--- a/sass/components_index/_hero-index.scss
+++ b/sass/components_index/_hero-index.scss
@@ -46,14 +46,14 @@
     height: 600px;
 
     background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
-      url("/images/desktop/hero-desk.jpg");
+      url(../images/desktop/hero-desk.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, $hero-bg-overlay, $hero-bg-overlay),
-        url("/images/desktop/hero-desk@2x.jpg");
+        url(../images/desktop/hero-desk@2x.jpg);
     }
   }
 }
